--- a/notebooks/hw/dz_1.ipynb
+++ b/notebooks/hw/dz_1.ipynb
@@ -88,31 +88,9 @@
     " * we see that **output** is the target column.\n",
     " * we see that most of the columns are **numerical** but some are **categorical**.\n",
     " \n",
-    "Note that the columns at the link do not directly correspond to the kaggle dataset, so some I made some guessing.\n",
+    "Note that the columns at the link do not directly correspond to the kaggle dataset, so I made some guessing.\n",
     "\n",
     "For simplicity we will treat categorical featuers as numerical."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\u001b[36mcategory_col\u001b[39m: \u001b[32mInt\u001b[39m = \u001b[32m3\u001b[39m\n",
-       "\u001b[36mtarget_col\u001b[39m: \u001b[32mInt\u001b[39m = \u001b[32m-1\u001b[39m"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "val category_col = 3\n",
-    "val target_col = -1"
    ]
   },
   {
@@ -418,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -429,12 +407,13 @@
        "defined \u001b[32mfunction\u001b[39m \u001b[36mnormalize\u001b[39m"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "// workaround to calculate mean given NaNs\n",
     "def mean_with_nans(v: DenseMatrix[Double], mask: DenseMatrix[Double]): DenseVector[Double] = {\n",
     "    val uncorrected_means = v(::, *).map( mean(_) ).t\n",
     "    val nans_per_column = mask(::, *).map( sum(_) ).t\n",
@@ -471,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -480,12 +459,13 @@
        "defined \u001b[32mfunction\u001b[39m \u001b[36mtrain\u001b[39m"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "// train linear regression with l2 reg\n",
     "def train(data: DenseMatrix[Double], \n",
     "          target: DenseVector[Double], \n",
     "          lr: Double, \n",
@@ -661,13 +641,6 @@
    "source": [
     "Looks close to what is achieved [here](https://www.kaggle.com/vinayvk1808/facebook-comment-dataset-using-random-forest)."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
